Removed extra label element, scrollbars fixed in all except IE

--- a/app/styles/TextareaDecorator.css
+++ b/app/styles/TextareaDecorator.css
@@ -6,7 +6,7 @@
 
 /* settings you can play with */
 
-.ldt, .ldt label {
+.ldt, .ldt textarea {
 	padding: 4px;
 }
 
@@ -35,22 +35,15 @@
 	-moz-padding-start: 1px;
 }
 
-.ldt label {
+.ldt textarea {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
 	display: inline;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
-	cursor: text;
-}
-
-.ldt textarea {
 	margin: 0;
-	padding: 0;
 	border: 0;
 	background: 0;
 	outline: none;
